[gd_scene load_steps=2 format=3 uid="uid://bts7ku8df322r"]

[ext_resource type="Script" path="res://57. Popup Tooltip/scenes/popups.gd" id="1_hpydp"]

[node name="Popups" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hpydp")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ItemPopup" type="PopupPanel" parent="UI"]
unique_name_in_owner = true
position = Vector2i(576, 324)
size = Vector2i(109, 121)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ItemPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 105.0
offset_bottom = 117.0

[node name="Name" type="Label" parent="UI/ItemPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ItemPopup/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Level"

[node name="Level" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "7"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/ItemPopup/VBoxContainer"]
layout_mode = 2

[node name="AttributeType" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Strength"

[node name="AttributeValue" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "15"

[node name="Rarity" type="Label" parent="UI/ItemPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
